Submit button alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -99,12 +99,13 @@ button[type=submit]{
   bottom: 15px;
   background-color: var(--blue);
   width: 90%;
-  margin: auto;
   border: none;
   font-size: 1em;
   border-radius: 2em;
   padding: 15px 15px;
-  align-items: center;
+  margin: auto;
+  left: 50%;  
+  transform: translateX(-50%);
 }
 
 .form h2 {
@@ -112,7 +113,10 @@ button[type=submit]{
   padding-bottom: 15px;;
 }
 
-.content, .engage, .over-night-tips, .connect{
+.content, 
+.engage, 
+.over-night-tips, 
+.connect{
   color: var(--dark-blue);
   padding-top: 20px;
   margin: auto;
@@ -143,7 +147,9 @@ p {
   justify-content: space-between; 
 }
 
-select, #activity-search, #web-search {
+select,
+#activity-search, 
+#web-search {
   font-family: inherit;
   font-size: 0.8em; /*fungerar inte*/
   color: var(--dark-blue);
@@ -153,7 +159,7 @@ select, #activity-search, #web-search {
   border-radius: 7px;
 }
 
-.card-container, .tips-container {
+.card-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -165,7 +171,7 @@ select, #activity-search, #web-search {
   margin: auto;
 }
 
-.card, .tips {
+.card {
   position: relative;
   color: var(--dark-blue);
   font-family: "Inter", sans-serif;
@@ -177,7 +183,7 @@ select, #activity-search, #web-search {
   flex-direction: column;
   }
 
-.card-body, .tips-body {
+.card-body {
   background-color: #ffffff;
   border-width: 0;
   border-radius: 7px; 
@@ -213,7 +219,8 @@ select, #activity-search, #web-search {
   margin: 0 0 0 30px;
 }
 
-.card-tag-text, .card-tag-price {
+.card-tag-text, 
+.card-tag-price {
   font-family: inherit;
   font-size: 0.75em;
   font-weight: 500;
@@ -253,7 +260,9 @@ select, #activity-search, #web-search {
 }
   
   /* Add rounded corners to the top left and the top right corner of the image */
-.card-img-top, .engage-img, .tips-img-top, .connect-img {
+.card-img-top, 
+.engage-img, 
+.connect-img {
     border-radius: 7px 7px 0 0;
   }
 
@@ -289,14 +298,15 @@ select, #activity-search, #web-search {
 }
 
 .ad-img-main {
-  width: 95%;
+  width: 100%;
 }
 
 .ad-img-mobile {
   display: none;
 }
 
-.engage-container, .connect-container {
+.engage-container,
+.connect-container {
   margin: 40px auto 0 auto;
   display: flex;
   justify-content: center;
@@ -336,7 +346,7 @@ select, #activity-search, #web-search {
   padding: 10px 10px 0 15px;
 }
 
-button[type=reset]{
+button[type=reset] {
   background-color: var(--blue);
   display: block;
   width: 80%;
@@ -349,10 +359,11 @@ button[type=reset]{
 
 button[type=submit]:hover, button[type=reset]:hover {
   background-color: var(--blue);
-  /* margin: 20.5px auto; */ 
+  /* margin: 20.5px auto; which was an attempt to simulate an animation!*/ 
 }
 
 /* FOOTER */
+
 footer {
   display: flex;
   flex-direction: column;
@@ -540,7 +551,7 @@ footer hr {
     justify-content: space-around;
   }
 
-  .card, .tips {
+  .card {
     width: 30%;
   }
 
